Checked "Decompression Fallback" Option

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <script src="Build/webgl.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/webgl.data.br",
-        frameworkUrl: "Build/webgl.framework.js.br",
-        codeUrl: "Build/webgl.wasm.br",
+        dataUrl: "Build/webgl.data.unityweb",
+        frameworkUrl: "Build/webgl.framework.js.unityweb",
+        codeUrl: "Build/webgl.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Odds Calculator ",
